--- a/game.css
+++ b/game.css
@@ -2,7 +2,27 @@ body {
 
 	background: black;
 	background-size: cover;
+		background-color: #000000;
+	background-image: url(stars1.png),  url(stars2.png);
+  	background-position: 0px 0px;
+ 	background-repeat: repeat-x, no-repeat;
+  	animation: animate-background linear 30s infinite;
+
 }
+
+@keyframes animate-background {
+
+  from {
+
+   background-position: -500px 0px, 0px 0px; 
+  } 
+  
+  to {
+
+   background-position:  0px 0px, -1000px 0px;
+  }
+}
+
 
 #score {
 
@@ -17,7 +37,7 @@ body {
 
 #pos {
 
-	color: orange;
+	color: range;
 }
 
 #moves {
@@ -79,12 +99,57 @@ div#board > div {
 .effect {
 
    -webkit-box-shadow: -6px 7px 4px -8px rgba(255,255,255,1);
-   -moz-box-shadow: -6px 7px 4px -8px rgba(255,255,255,1);
-   box-shadow: -6px 7px 4px -8px rgba(255,255,255,1);
+   -moz-box-shadow:    -6px 7px 4px -8px rgba(255,255,255,1);
+   box-shadow:         -6px 7px 4px -8px rgba(255,255,255,1);
 }  
  
 
+/* Instructions.html */
 
+.page {
+
+	background-color: #000000;
+	background-image: url(stars1.png),  url(stars2.png);
+  	background-position: 0px 0px;
+ 	background-repeat: repeat-x, no-repeat;
+  	animation: animate-background linear 30s infinite;
+
+}
+
+@keyframes animate-background {
+
+  from {
+
+   background-position: -500px 0px, 0px 0px; 
+  } 
+  
+  to {
+
+   background-position:  0px 0px, -1000px 0px;
+  }
+}
+
+.heading {
+
+	color: white;
+	font-family: 'Cinzel Decorative';
+	font-size: 45px;
+	text-align: center;
+	margin-top: 15px;
+}
+
+.instructions {
+
+	background-color: #ffffff;
+	height: 500px;
+	width: 60%;
+	margin: auto;
+	margin-top: 20px;
+
+	-moz-box-shadow:    inset 0 0 10px #000000;
+    -webkit-box-shadow: inset 0 0 10px #000000;
+    box-shadow:         inset 0 0 10px #000000;
+}
 
 
  
