--- a/game.css
+++ b/game.css
@@ -151,4 +151,133 @@ div#board > div {
 }
 
 
- 
+@-webkit-keyframes typing { from { width: 0; } }
+@-webkit-keyframes blink-caret { 50% { border-color: transparent; } }
+
+
+.animate {
+
+	font-family: 'Shadows Into Light', cursive;
+	padding-left: 250px;
+	font-size: 60px;
+
+	width: calc(0.55em * 13); 
+	width: 23ch;
+	white-space: nowrap;
+	overflow: hidden;
+	-webkit-animation: typing 1s steps(13, end),
+	blink-caret .5s step-end infinite alternate;
+
+}
+
+.how {
+
+	font-family: 'Tangerine', cursive;
+	font-size: 45px;
+	padding-left: 280px;
+	margin-top: -5px;
+}
+
+.howcon {
+
+	font-family: 'Tangerine', cursive;
+	font-size: 50px;
+	padding-left: 335px;
+	margin-top: -5px;
+}
+
+#texts {
+
+	padding-left: 150px;
+}
+
+img {
+
+	padding-left: 143px;
+}
+
+a  {
+
+	text-decoration: none;
+	color: orange;
+}
+
+.secfade,.play{
+    
+    margin-top: -40px;
+    font-family: 'Tangerine', cursive;
+    font-size: 36px;
+
+    -webkit-animation: fadein 3s;
+    -moz-animation: fadein 3s; 
+    -ms-animation: fadein 3s; 
+    -o-animation: fadein 3s;
+	animation: fadein 3s;
+}
+
+.play {
+
+	padding-top: 12px;
+	color: orange;
+	padding-left: 335px;
+}
+
+#level {
+
+	font-family: 'Shadows Into Light', cursive;
+	padding-left : 280px;
+	font-size: 38px;
+	margin-top: -40px;
+}
+
+ul {
+
+	margin-top: -60px;
+	font-family: 'Tangerine', cursive;
+	font-size: 35px;
+	margin-top: -20px;
+	list-style: none;
+	text-align: center;
+}
+
+.score, .score2 {
+
+	margin-top: -30px;
+	font-family: 'Shadows Into Light', cursive;
+	padding-left : 230px;
+	font-size: 30px;
+}
+
+.score2 {
+
+	margin-top: -45px;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
